--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -52,3 +52,50 @@ i.r14::before{
 i.r15::before{
     background-position: -480px -0
 }
+
+i.r16::before{
+    background-position: -32px -32px
+}
+i.r17::before{
+    background-position: -64px -32px
+}
+i.r18::before{
+    background-position: -96px -32px
+}
+i.r19::before{
+    background-position: -128px -32px
+}
+i.r20::before{
+    background-position: -160px -32px
+}
+i.r21::before{
+    background-position: -192px -32px
+}
+i.r22::before{
+    background-position: -224px -32px
+}
+i.r23::before{
+    background-position: -256px -32px
+}
+i.r24::before{
+    background-position: -288px -32px
+}
+i.r25::before{
+    background-position: -320px -32px
+}
+i.r26::before{
+    background-position: -352px -32px
+}
+i.r27::before{
+    background-position: -384px -32px
+}
+i.r28::before{
+    background-position: -416px -32px
+}
+i.r29::before{
+    background-position: -448px -32px
+}
+i.r30::before{
+    background-position: -480px -32px
+}
+
