--- a/main/CSS/styles.css
+++ b/main/CSS/styles.css
@@ -263,3 +263,15 @@ input{
     top: 6px;
     left: 6px;
 }
+
+.crafting-app__item{
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+i.crafting-app__item:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
