--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -10,45 +10,59 @@
 i.r1::before{
     background-position: -32px -0
 }
+
 i.r2::before{
     background-position: -64px -0
 }
+
 i.r3::before{
     background-position: -96px -0
 }
+
 i.r4::before{
     background-position: -128px -0
 }
+
 i.r5::before{
     background-position: -160px -0
 }
+
 i.r6::before{
     background-position: -192px -0
 }
+
 i.r7::before{
     background-position: -224px -0
 }
+
 i.r8::before{
     background-position: -256px -0
 }
+
 i.r9::before{
     background-position: -288px -0
 }
+
 i.r10::before{
     background-position: -320px -0
 }
+
 i.r11::before{
     background-position: -352px -0
 }
+
 i.r12::before{
     background-position: -384px -0
 }
+
 i.r13::before{
     background-position: -416px -0
 }
+
 i.r14::before{
     background-position: -448px -0
 }
+
 i.r15::before{
     background-position: -480px -0
 }
@@ -56,46 +70,122 @@ i.r15::before{
 i.r16::before{
     background-position: -32px -32px
 }
+
 i.r17::before{
     background-position: -64px -32px
 }
+
 i.r18::before{
     background-position: -96px -32px
 }
+
 i.r19::before{
     background-position: -128px -32px
 }
+
 i.r20::before{
     background-position: -160px -32px
 }
+
 i.r21::before{
     background-position: -192px -32px
 }
+
 i.r22::before{
     background-position: -224px -32px
 }
+
 i.r23::before{
     background-position: -256px -32px
 }
+
 i.r24::before{
     background-position: -288px -32px
 }
+
 i.r25::before{
     background-position: -320px -32px
 }
+
 i.r26::before{
     background-position: -352px -32px
 }
+
 i.r27::before{
     background-position: -384px -32px
 }
+
 i.r28::before{
     background-position: -416px -32px
 }
+
 i.r29::before{
     background-position: -448px -32px
 }
+
 i.r30::before{
     background-position: -480px -32px
 }
 
+i.r31::before{
+    background-position: -0 -64px;
+}
+
+i.r32::before{
+    background-position: -32px -64px
+}
+
+i.r33::before{
+    background-position: -64px -64px
+}
+
+i.r34::before{
+    background-position: -96px -64px
+}
+
+i.r35::before{
+    background-position: -128px -64px
+}
+
+i.r36::before{
+    background-position: -160px -64px
+}
+    
+i.r37::before{
+    background-position: -192px -64px
+}
+
+i.r38::before{
+    background-position: -224px -64px
+}
+
+i.r39::before{
+    background-position: -256px -64px
+}
+
+i.r40::before{
+    background-position: -288px -64px
+}
+i.r41::before{
+    background-position: -320px -64px
+}
+
+i.r42::before{
+    background-position: -352px -64px
+}
+
+i.r43::before{
+    background-position: -384px -64px
+}
+
+i.r44::before{
+    background-position: -416px -64px
+}
+
+i.r45::before{
+    background-position: -448px -64px
+}
+
+i.r46::before{
+    background-position: -480px -64px
+}
