--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -189,3 +189,66 @@ i.r45::before{
 i.r46::before{
     background-position: -480px -64px
 }
+
+i.r47::before{
+    background-position: -0 -96px;
+}
+
+i.r48::before{
+    background-position: -32px -96px
+}
+
+i.r49::before{
+    background-position: -64px -96px
+}
+
+i.r50::before{
+    background-position: -96px -96px
+}
+
+i.r51::before{
+    background-position: -128px -96px
+}
+
+i.r52::before{
+    background-position: -160px -96px
+}
+    
+i.r53::before{
+    background-position: -192px -96px
+}
+
+i.r54::before{
+    background-position: -224px -96px
+}
+
+i.r55::before{
+    background-position: -256px -96px
+}
+
+i.r56::before{
+    background-position: -288px -96px
+}
+i.r57::before{
+    background-position: -320px -96px
+}
+
+i.r58::before{
+    background-position: -352px -96px
+}
+
+i.r59::before{
+    background-position: -384px -96px
+}
+
+i.r60::before{
+    background-position: -416px -96px
+}
+
+i.r61::before{
+    background-position: -448px -96px
+}
+
+i.r62::before{
+    background-position: -480px -96px
+}
