--- a/main/CSS/styles.css
+++ b/main/CSS/styles.css
@@ -29,39 +29,30 @@ header div{
 }
 
 .select {
-    height: 35px;
+    height: 30px;
     position: relative;
     margin: 0 auto;
     background-color: white;
 }
 
-
-header form {
-    display: block;
-    width: 300px;
-    height: 35px;
-    padding-left: 10px;
-}
-
 input{
     background-color: white;
-    height: 35px;
+    height: 100%;
     padding:4px 10px;
-    border:1px solid;
     font-size:12px;
 
 }
 
 .search {
-    width: 200px;
+    width: 950px;
 }
 
 .submit{
-    height: 35px;
-    width: 70px;
+    height: 100%;
+    width:80px;
     background-color:white;  
-    color:#ffffff;
-    border: 1px solid white;
+    color:#000000;
+    font-size:12px;
 }
 
 .page{
