--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -252,3 +252,255 @@ i.r61::before{
 i.r62::before{
     background-position: -480px -96px
 }
+
+i.r63::before{
+    background-position: -0 -128px
+}
+
+i.r64::before{
+    background-position: -32px -128px
+}
+
+i.r65::before{
+    background-position: -64px -128px
+}
+
+i.r66::before{
+    background-position: -96px -128px
+}
+
+i.r67::before{
+    background-position: -128px -128px
+}
+
+i.r68::before{
+    background-position: -160px -128px
+}
+    
+i.r69::before{
+    background-position: -192px -128px
+}
+
+i.r70::before{
+    background-position: -224px -128px
+}
+
+i.r71::before{
+    background-position: -256px -128px
+}
+
+i.r72::before{
+    background-position: -288px -128px
+}
+i.r73::before{
+    background-position: -320px -128px
+}
+
+i.r74::before{
+    background-position: -352px -128px
+}
+
+i.r75::before{
+    background-position: -384px -128px
+}
+
+i.r76::before{
+    background-position: -416px -128px
+}
+
+i.r77::before{
+    background-position: -448px -128px
+}
+
+i.r78::before{
+    background-position: -480px -128px
+}
+
+i.r79::before{
+    background-position: -0 -160px;
+}
+
+i.r80::before{
+    background-position: -32px -160px
+}
+
+i.r81::before{
+    background-position: -64px -160px
+}
+
+i.r82::before{
+    background-position: -96px -160px
+}
+
+i.r83::before{
+    background-position: -128px -160px
+}
+
+i.r84::before{
+    background-position: -160px -160px
+}
+    
+i.r85::before{
+    background-position: -192px -160px
+}
+
+i.r86::before{
+    background-position: -224px -160px
+}
+
+i.r87::before{
+    background-position: -256px -160px
+}
+
+i.r88::before{
+    background-position: -288px -160px
+}
+i.r89::before{
+    background-position: -320px -160px
+}
+
+i.r90::before{
+    background-position: -352px -160px
+}
+
+i.r91::before{
+    background-position: -384px -160px
+}
+
+i.r92::before{
+    background-position: -416px -160px
+}
+
+i.r93::before{
+    background-position: -448px -160px
+}
+
+i.r94::before{
+    background-position: -480px -160px
+}
+
+i.r95::before{
+    background-position: -0 -192px;
+}
+
+i.r96::before{
+    background-position: -32px -192px
+}
+
+i.r97::before{
+    background-position: -64px -192px
+}
+
+i.r98::before{
+    background-position: -96px -192px
+}
+
+i.r99::before{
+    background-position: -128px -192px
+}
+
+i.r100::before{
+    background-position: -160px -192px
+}
+    
+i.r101::before{
+    background-position: -192px -192px
+}
+
+i.r102::before{
+    background-position: -224px -192px
+}
+
+i.r103::before{
+    background-position: -256px -192px
+}
+
+i.r104::before{
+    background-position: -288px -192px
+}
+i.r105::before{
+    background-position: -320px -192px
+}
+
+i.r106::before{
+    background-position: -352px -192px
+}
+
+i.r107::before{
+    background-position: -384px -192px
+}
+
+i.r108::before{
+    background-position: -416px -192px
+}
+
+i.r109::before{
+    background-position: -448px -192px
+}
+
+i.r110::before{
+    background-position: -480px -192px
+}
+
+i.r111::before{
+    background-position: -0 -224px;
+}
+
+i.r112::before{
+    background-position: -32px -224px
+}
+
+i.r113::before{
+    background-position: -64px -224px
+}
+
+i.r114::before{
+    background-position: -96px -224px
+}
+
+i.r115::before{
+    background-position: -128px -224px
+}
+
+i.r116::before{
+    background-position: -160px -224px
+}
+    
+i.r117::before{
+    background-position: -192px -224px
+}
+
+i.r118::before{
+    background-position: -224px -224px
+}
+
+i.r119::before{
+    background-position: -256px -224px
+}
+
+i.r120::before{
+    background-position: -288px -224px
+}
+i.r121::before{
+    background-position: -320px -224px
+}
+
+i.r122::before{
+    background-position: -352px -224px
+}
+
+i.r123::before{
+    background-position: -384px -224px
+}
+
+i.r124::before{
+    background-position: -416px -224px
+}
+
+i.r125::before{
+    background-position: -448px -224px
+}
+
+i.r126::before{
+    background-position: -480px -224px
+}
