--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -504,3 +504,570 @@ i.r125::before{
 i.r126::before{
     background-position: -480px -224px
 }
+
+i.r127::before{
+    background-position: -0 -256px;
+}
+
+i.r128::before{
+    background-position: -32px -256px
+}
+
+i.r129::before{
+    background-position: -64px -256px
+}
+
+i.r130::before{
+    background-position: -96px -256px
+}
+
+i.r131::before{
+    background-position: -128px -256px
+}
+
+i.r132::before{
+    background-position: -160px -256px
+}
+    
+i.r133::before{
+    background-position: -192px -256px
+}
+
+i.r134::before{
+    background-position: -224px -256px
+}
+
+i.r135::before{
+    background-position: -256px -256px
+}
+
+i.r136::before{
+    background-position: -288px -256px
+}
+i.r137::before{
+    background-position: -320px -256px
+}
+
+i.r138::before{
+    background-position: -352px -256px
+}
+
+i.r139::before{
+    background-position: -384px -256px
+}
+
+i.r140::before{
+    background-position: -416px -256px
+}
+
+i.r141::before{
+    background-position: -448px -256px
+}
+
+i.r142::before{
+    background-position: -480px -256px
+}
+
+i.r143::before{
+    background-position: -0 -288px;
+}
+
+i.r144::before{
+    background-position: -32px -288px
+}
+
+i.r145::before{
+    background-position: -64px -288px
+}
+
+i.r146::before{
+    background-position: -96px -288px
+}
+
+i.r147::before{
+    background-position: -128px -288px
+}
+
+i.r148::before{
+    background-position: -160px -288px
+}
+    
+i.r149::before{
+    background-position: -192px -288px
+}
+
+i.r150::before{
+    background-position: -224px -288px
+}
+
+i.r151::before{
+    background-position: -256px -288px
+}
+
+i.r152::before{
+    background-position: -288px -288px
+}
+i.r153::before{
+    background-position: -320px -288px
+}
+
+i.r154::before{
+    background-position: -352px -288px
+}
+
+i.r155::before{
+    background-position: -384px -288px
+}
+
+i.r156::before{
+    background-position: -416px -288px
+}
+
+i.r157::before{
+    background-position: -448px -288px
+}
+
+i.r158::before{
+    background-position: -480px -288px
+}
+
+i.r159::before{
+    background-position: -0 -320px;
+}
+
+i.r160::before{
+    background-position: -32px -320px
+}
+
+i.r161::before{
+    background-position: -64px -320px
+}
+
+i.r162::before{
+    background-position: -96px -320px
+}
+
+i.r163::before{
+    background-position: -128px -320px
+}
+
+i.r164::before{
+    background-position: -160px -320px
+}
+    
+i.r165::before{
+    background-position: -192px -320px
+}
+
+i.r166::before{
+    background-position: -224px -320px
+}
+
+i.r167::before{
+    background-position: -256px -320px
+}
+
+i.r168::before{
+    background-position: -288px -320px
+}
+i.r169::before{
+    background-position: -320px -320px
+}
+
+i.r170::before{
+    background-position: -352px -320px
+}
+
+i.r171::before{
+    background-position: -384px -320px
+}
+
+i.r172::before{
+    background-position: -416px -320px
+}
+
+i.r173::before{
+    background-position: -448px -320px
+}
+
+i.r174::before{
+    background-position: -480px -320px
+}
+
+i.r175::before{
+    background-position: -0 -352px;
+}
+
+i.r176::before{
+    background-position: -32px -352px
+}
+
+i.r177::before{
+    background-position: -64px -352px
+}
+
+i.r178::before{
+    background-position: -96px -352px
+}
+
+i.r179::before{
+    background-position: -128px -352px
+}
+
+i.r180::before{
+    background-position: -160px -352px
+}
+    
+i.r181::before{
+    background-position: -192px -352px
+}
+
+i.r182::before{
+    background-position: -224px -352px
+}
+
+i.r183::before{
+    background-position: -256px -352px
+}
+
+i.r184::before{
+    background-position: -288px -352px
+}
+i.r185::before{
+    background-position: -320px -352px
+}
+
+i.r186::before{
+    background-position: -352px -352px
+}
+
+i.r187::before{
+    background-position: -384px -352px
+}
+
+i.r188::before{
+    background-position: -416px -352px
+}
+
+i.r189::before{
+    background-position: -448px -352px
+}
+
+i.r190::before{
+    background-position: -480px -352px
+}
+
+i.r191::before{
+    background-position: -0 -384px;
+}
+
+i.r192::before{
+    background-position: -32px -384px
+}
+
+i.r193::before{
+    background-position: -64px -384px
+}
+
+i.r194::before{
+    background-position: -96px -384px
+}
+
+i.r195::before{
+    background-position: -128px -384px
+}
+
+i.r196::before{
+    background-position: -160px -384px
+}
+    
+i.r197::before{
+    background-position: -192px -384px
+}
+
+i.r198::before{
+    background-position: -224px -384px
+}
+
+i.r199::before{
+    background-position: -256px -384px
+}
+
+i.r200::before{
+    background-position: -288px -384px
+}
+i.r201::before{
+    background-position: -320px -384px
+}
+
+i.r202::before{
+    background-position: -352px -384px
+}
+
+i.r1203::before{
+    background-position: -384px -384px
+}
+
+i.r204::before{
+    background-position: -416px -384px
+}
+
+i.r205::before{
+    background-position: -448px -384px
+}
+
+i.r206::before{
+    background-position: -480px -384px
+}
+
+i.r207::before{
+    background-position: -0 -416px;
+}
+
+i.r208::before{
+    background-position: -32px -416px
+}
+
+i.r209::before{
+    background-position: -64px -416px
+}
+
+i.r210::before{
+    background-position: -96px -416px
+}
+
+i.r211::before{
+    background-position: -128px -416px
+}
+
+i.r212::before{
+    background-position: -160px -416px
+}
+    
+i.r213::before{
+    background-position: -192px -416px
+}
+
+i.r214::before{
+    background-position: -224px -416px
+}
+
+i.r215::before{
+    background-position: -256px -416px
+}
+
+i.r216::before{
+    background-position: -288px -416px
+}
+i.r217::before{
+    background-position: -320px -416px
+}
+
+i.r218::before{
+    background-position: -352px -416px
+}
+
+i.r219::before{
+    background-position: -384px -416px
+}
+
+i.r220::before{
+    background-position: -416px -416px
+}
+
+i.r221::before{
+    background-position: -448px -416px
+}
+
+i.r222::before{
+    background-position: -480px -416px
+}
+
+i.r223::before{
+    background-position: -0 -448px
+}
+
+i.r224::before{
+    background-position: -32px -448px
+}
+
+i.r225::before{
+    background-position: -64px -448px
+}
+
+i.r226::before{
+    background-position: -96px -448px
+}
+
+i.r227::before{
+    background-position: -128px -448px
+}
+
+i.r228::before{
+    background-position: -160px -448px
+}
+    
+i.r229::before{
+    background-position: -192px -448px
+}
+
+i.r230::before{
+    background-position: -224px -448px
+}
+
+i.r231::before{
+    background-position: -256px -448px
+}
+
+i.r232::before{
+    background-position: -288px -448px
+}
+i.r233::before{
+    background-position: -320px -448px
+}
+
+i.r234::before{
+    background-position: -352px -448px
+}
+
+i.r235::before{
+    background-position: -384px -448px
+}
+
+i.r236::before{
+    background-position: -416px -448px
+}
+
+i.r237::before{
+    background-position: -448px -448px
+}
+
+i.r238::before{
+    background-position: -480px -448px
+}
+
+i.r239::before{
+    background-position: -0 -480px
+}
+
+i.r240::before{
+    background-position: -32px -480px
+}
+
+i.r241::before{
+    background-position: -64px -480px
+}
+
+i.r242::before{
+    background-position: -96px -480px
+}
+
+i.r243::before{
+    background-position: -128px -480px
+}
+
+i.r244::before{
+    background-position: -160px -480px
+}
+    
+i.r245::before{
+    background-position: -192px -480px
+}
+
+i.r246::before{
+    background-position: -224px -480px
+}
+
+i.r247::before{
+    background-position: -256px -480px
+}
+
+i.r248::before{
+    background-position: -288px -480px
+}
+i.r249::before{
+    background-position: -320px -480px
+}
+
+i.r250::before{
+    background-position: -352px -480px
+}
+
+i.r251::before{
+    background-position: -384px -480px
+}
+
+i.r252::before{
+    background-position: -416px -480px
+}
+
+i.r253::before{
+    background-position: -448px -480px
+}
+
+i.r254::before{
+    background-position: -480px -480px
+}
+
+i.r255::before{
+    background-position: -0 -512px
+}
+
+i.r256::before{
+    background-position: -32px -512px
+}
+
+i.r257::before{
+    background-position: -64px -512px
+}
+
+i.r258::before{
+    background-position: -96px -512px
+}
+
+i.r259::before{
+    background-position: -128px -512px
+}
+
+i.r260::before{
+    background-position: -160px -512px
+}
+    
+i.r261::before{
+    background-position: -192px -512px
+}
+
+i.r262::before{
+    background-position: -224px -512px
+}
+
+i.r263::before{
+    background-position: -256px -512px
+}
+
+i.r264::before{
+    background-position: -288px -512px
+}
+i.r265::before{
+    background-position: -320px -512px
+}
+
+i.r266::before{
+    background-position: -352px -512px
+}
+
+i.r267::before{
+    background-position: -384px -512px
+}
+
+i.r268::before{
+    background-position: -416px -512px
+}
+
+i.r269::before{
+    background-position: -448px -512px
+}
+
+i.r270::before{
+    background-position: -480px -512px
+}
