--- a/main/CSS/styles.css
+++ b/main/CSS/styles.css
@@ -234,17 +234,18 @@ header a img{
 .crafting-app__items{
     display: flex;
     justify-content: center;
+    width: 100%;
     height: 520px;
-    position: relative;
 }
-#vanilaChild {
+
+/* #vanilaChild {
     display: flex;
     flex-wrap: wrap;
-}
+} */
 
 .crafting-app__item{
     position: relative;
-    display: block;
+    display: inline-block;
     width: 44px;
     height: 44px;
     cursor: pointer;
