--- a/main/css/Item-r.css
+++ b/main/css/Item-r.css
@@ -1,4 +1,4 @@
-.crafting-app_recipe i::before, .railcraft i:before{
+.recipe i:before, .railcraft i:before{
     width: 32px;
     height: 32px;
     position: absolute;
