--- a/main/css/item-v.css
+++ b/main/css/item-v.css
@@ -1,4 +1,4 @@
-.crafting-app_recipe i::before, .vanila i:before{
+.recipe i:before,.vanila i:before{
     width: 32px;
     height: 32px;
     position: absolute;
