--- a/main/css/styles.css
+++ b/main/css/styles.css
@@ -74,9 +74,7 @@ header a img{
 
 .crafting-app__recipe {
     overflow: hidden;
-    display: inline-block;
-    margin-right: 15px;
-    float: left;
+    height: 152px;
 }
 
 .recipe {
