--- a/main/css/recipe.css
+++ b/main/css/recipe.css
@@ -1,7 +1,6 @@
 .recipe {
     height: 152px;
     padding: 10px;
-    overflow: hidden;
     background: #c7c7c7;
     border: 1px solid #c3baba;
     border-radius: 5px;
@@ -9,7 +8,7 @@
     line-height: 0;
     float: left;
     position: relative;
-
+    display: none;
 }
 
 .recipe_input, .recipe_output {
