--- a/main/css/crafting-app.css
+++ b/main/css/crafting-app.css
@@ -49,10 +49,11 @@ i.crafting-app__item:hover{
 }
 
 #craffting-app__categories{
-    margin-bottom: 10px
+    margin-bottom: 5px
 }
 
 .crafting-app__category{
+    font-size: 14px;
     color: #5791be;
     border-bottom: 1px dashed;
     margin-right: 7px;
@@ -60,7 +61,7 @@ i.crafting-app__item:hover{
     cursor: pointer;
 }
 
-.crafting-app__active{
+.category_active{
     border-bottom: none;
     cursor: default;
 }
