--- a/main/css/style.css
+++ b/main/css/style.css
@@ -9,15 +9,20 @@ body{
     padding-right: 10px;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1024px){
+
+    body{
+        background: none;
+    }
+
     .container{
-        width: 100%!important;
+        width: 100%;
         padding: 0;
     }
 
     header{
         height: auto !important;
-        width: 100% !important;
+        width: 100%;
     }
 
     header a img{
@@ -27,12 +32,20 @@ body{
     .select{
         width: 100% !important;
         padding: 5px;
+        text-align: center; 
     }
-}
 
-@media screen and (max-width: 1025px){
+    .crafting-app__item{
+        width: 45px;
+        height: 45px;
+    }
+    .crafting-app__items i::before{
+        top: 6px;
+        left: 6px;
+    }
+
     #crafting-app__title{
-        height: 40px;
+        height: auto;
     }
 }
 
