--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,3 +1,9 @@
+@media (min-width: 1200px) {
+    .container-xl{
+        max-width: 1060px !important
+    }
+}
+
 body{
     background: url(../src/back-ground.png);
     background-color:rgb(34, 51, 58);
