--- a/main/css/scrollbar.css
+++ b/main/css/scrollbar.css
@@ -1,8 +1,9 @@
 :root {
     --width:10px;
+    --rounding: 30px;
     --color:#474747;
     --back:#302f2f;
-    --rounding: 30px;
+    --hover:#6f6f6f;
 }
 
 .scrollbar {
@@ -14,4 +15,4 @@
 .scrollbar::-webkit-scrollbar {width: var(--width); }
 .scrollbar::-webkit-scrollbar-track {background-color: var(--back); border-radius: var(--rounding);}
 .scrollbar::-webkit-scrollbar-thumb {background-color: var(--color); border-radius: var(--rounding);}
-.scrollbar::-webkit-scrollbar-thumb:hover{background-color: #6f6f6f; }
+.scrollbar::-webkit-scrollbar-thumb:hover{background-color:var(--hover); }
