--- a/main/css/recipe.css
+++ b/main/css/recipe.css
@@ -256,3 +256,13 @@
     cursor: pointer;
     color: white;
 }
+
+.recipe i b{
+    position: absolute;
+    right: 5px;
+    bottom: 15px;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    color: #fff;
+}
